# realsr-ncnn-vulkan-python

./: .gitmodules  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: CI.yml  release.yml
generic_sr_ncnn_vulkan_python/: CMakeLists.txt  realsr.i  sr_ncnn_vulkan.py
realsr_ncnn_vulkan_python/: CMakeLists.txt  realsr.i  realsr_ncnn_vulkan.py  realsr_ncnn_vulkan_PIL.py  realsr_ncnn_vulkan_without_PIL.py  realsr_wrapped.cpp  realsr_wrapped.h
realsr_ncnn_vulkan_python/realsr-ncnn-vulkan/src/: CMakeLists.txt  main.cpp  realsr.cpp  realsr.h
realsr_ncnn_vulkan_python/realsr-ncnn-vulkan/src/ncnn/src/: allocator.cpp
realsr_ncnn_vulkan_python/sr-ncnn-vulkan/: README.md
realsr_ncnn_vulkan_python/sr-ncnn-vulkan/src/: realsr.cpp
sr_ncnn_vulkan_python/: CMakeLists.txt  sr.i  sr_ncnn_vulkan.py  sr_ncnn_vulkan_PIL.py  sr_wrapped.cpp  sr_wrapped.h
sr_ncnn_vulkan_python/sr-ncnn-vulkan/: README.md
sr_ncnn_vulkan_python/sr-ncnn-vulkan/.github/workflows/: release.yml
sr_ncnn_vulkan_python/sr-ncnn-vulkan/src/: CMakeLists.txt  main.cpp  sr.cpp  sr.h
sr_ncnn_vulkan_python/sr-ncnn-vulkan/src/ncnn/src/: allocator.cpp  gpu.cpp
