[metadata]
name = generic-sr-ncnn-vulkan-python
version = 1.0.0
author = ArchieMeng/styler00dollar
author_email = n/a
maintainer = styler00dollar
maintainer_email = n/a
license = MIT
license_file = LICENSE
platform = any
description = A Python FFI for generic NCNN super-resolution based on realsr-ncnn-vulkan-python
url = https://github.com/styler00dollar/generic-sr-ncnn-vulkan-python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords =
    realsr
    ncnn
    vulkan
    swig

[options]
packages = find:
install_requires = numpy; cmake-build-extension; cmake
python_requires = >=3.6
